Add buttons for 7 days of the week. Fix color of plus button. Add title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MedBoy 3000</string>
+    <string name="radioDaily">Daily</string>
+    <string name="radioWeekly">Weekly</string>
 </resources>
