Beginning to store data to file. Need to load into cards. detects which day it is.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MedBoy 3000</string>
+    <string name="app_name">MedBoy3K</string>
     <string name="radioDaily">Daily</string>
     <string name="radioWeekly">Weekly</string>
 </resources>
